Lilac: In filterCandidates(), keep common alleles from the same 2-digit group rare as alleles